<resources>
    <string name="app_name">AppCafeCol</string>
    <string name="no_count">¿No tienes cuenta? Registrate</string>
    <string name="ingresa">Ingresa</string>
    <string name="nombre">Nombre</string>
    <string name="email">Correo</string>
    <string name="registro">Registrate</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="login">Iniciar Sesion</string>
    <string name="resetPassword">Enviar contraseña</string>
    <string name="acept">He leido y acepto los</string>
    <string name="terms">Terminos y condiciones de uso.</string>
    <string name="empty_email">Introduce un email porfavor</string>
    <string name="invalid_email">Hmmm parece que el email esta mal escrito</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bar_title_terms">Términos y Condiciones de Uso</string>
    <string name="terms1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rhoncus convallis metus at
        pretium. Vivamus at lacinia leo. Praesent velit elit, suscipit sit amet pulvinar id, imperdiet ac massa. Quisque
        molestie lectus rhoncus urna tempor, ut lacinia mi tempor. Praesent volutpat, ligula eget lobortis cursus, mauris
        libero consequat ligula, nec scelerisque erat ipsum tempor justo. Aliquam ornare faucibus augue vel faucibus. Ut
        sollicitudin commodo tortor eu faucibus. Vestibulum lacinia ligula sed tortor auctor, vitae sollicitudin lorem dapibus.
        Phasellus sed tincidunt odio.</string>
    <string name="terms2">Praesent arcu nisi, auctor quis tempor id, vehicula non nulla. Sed a fermentum tellus, quis pharetra
        lorem. Fusce vehicula libero in ultricies varius. Suspendisse vel velit tortor. Aliquam non nisi eget lectus tempor
        consectetur sed in magna. Nullam tincidunt, nibh ut sodales suscipit, ante est luctus purus, sed pellentesque ipsum
        massa et quam. Proin sed sapien ultrices ex aliquet elementum sed et erat. Sed tincidunt felis sapien, a suscipit massa
        cursus et. Phasellus auctor tellus ac neque maximus accumsan. Morbi sit amet odio nec sapien pharetra elementum maximus
        id odio. Integer laoreet, neque id efficitur auctor, magna massa consequat justo, quis vehicula ipsum massa at sem. Morbi
        in ornare sapien, in luctus mauris. </string>
    <string name="terms3">Sed id libero auctor, lacinia lectus a, consequat nisl. Nam quis suscipit purus. Fusce at congue quam.
        Etiam congue imperdiet bibendum. Etiam at porttitor ipsum. Donec consectetur sapien in neque tempus tempus. Sed vulputate
        rutrum ultrices. Praesent in est leo. Suspendisse euismod purus id urna tempus pellentesque. Praesent condimentum nisl sit
        amet purus pulvinar sagittis. Cras purus felis, hendrerit et ornare ut, molestie id orci. Integer dictum consequat leo, id
        pretium urna tempus et. Donec nibh ante, laoreet id lorem vitae, vestibulum sollicitudin lorem. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="CerrarSesionAdmin">Cerrar Sesion</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>