<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9A743C"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="72dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        app:srcCompat="@drawable/cafecol" />

    <TextView
        android:id="@+id/textviewOlvideContraseña"
        style="@style/viewCustom"
        android:gravity="center_horizontal"
        android:onClick="forgetpassword"
        android:text="@string/forgotPassword"
        android:textColor="@color/negro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/viewCustom"
        android:layout_width="354dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:background="#30ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/viewCustom"
        android:layout_width="354dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:background="#30ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257" />

    <android.widget.Button
        android:id="@+id/bt_pantalla3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangulod"
        android:onClick="login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/negro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <LinearLayout
        android:id="@+id/lyterms"
        style="@style/viewCustom"
        android:layout_width="281dp"
        android:layout_height="50dp"
        android:background="@color/cafe"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565">

        <CheckBox
            android:id="@+id/cbAcept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acept"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tvTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:onClick="goTerms"
            android:text="@string/terms"
            android:textColor="@color/rojofuerte"
            android:textSize="10sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>